<package format="2">
  <name>rock-iodrivers_base</name>
  <version>0.0.0</version>
  <description>base implementation of driver classes</description>

  <maintainer email="sylvain.joyeux@m4x.org">Sylvain Joyeux</maintainer>
  <author     email="robotik@dfki.de">DFKI</author>

  <license>LGPL v2 or later</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>rock-cmake</build_depend>

  <depend>boost</depend>
  <depend>rock-logging</depend>
  <depend>rock-types</depend>

  <doc_depend>doxygen</doc_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>

